fix text overflow on library info and options ui

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
     --smallFont: 1rem;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .largeIcons {
     width: var(--largeIcons);
 }
@@ -38,7 +42,7 @@
 }
 
 .container > * {
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 
 .header {
@@ -50,7 +54,7 @@
 .header > div  {
     display: flex;
     align-items: center;
-    /* border: 1px solid red; */
+    border: 1px solid red;
     justify-content: center;
 }
 
@@ -141,7 +145,7 @@ input[type="search"]::-webkit-search-cancel-button {
     grid-template-rows: 1fr 7fr;
 }
 
-.display > *{
+.display > * {
     border: 1px solid red;
 }
 
@@ -149,35 +153,27 @@ input[type="search"]::-webkit-search-cancel-button {
     display: flex;
     gap: clamp(1rem, 2.5vw, 2rem);
     justify-content: center;
-    flex-wrap: wrap;
-}
-
-.genre:hover,
-.option:hover {
-    transform: scale(1.1);
-}
-
-
-.libraryInfo,
-.bookDisplayOptions {
-    display: flex;
     align-items: center;
-    justify-content: center;
-    gap: clamp(1rem, 2vw, 2rem);
+    flex-wrap: wrap;
+    padding: 0 clamp(.5rem, 2vw, 1rem) 0;
 }
 
-/* lines up text of library info and filtering options */
+/* aligns info text with filtering options */
 .info {
-    padding-top: 3.5px; 
+    padding-top: 3.5px;
 }
 
 .info,
 .filters {
     border: 1px solid black;
-    min-width: clamp(3rem, 10vw, 9rem);
-    height: 3rem;
+    flex: 1 1 auto;
+    min-height: 3rem;
     text-align: center;
-    flex-shrink: 1;
+}
+
+.genre:hover,
+.option:hover {
+    transform: scale(1.1);
 }
 
 
